--- a/src/gdrive/Dockerfile
+++ b/src/gdrive/Dockerfile
@@ -11,6 +11,9 @@ RUN --mount=type=cache,target=/root/.npm-production npm ci --ignore-scripts --om
 
 FROM node:22-alpine AS release
 
+# Install bash and sed
+RUN apk add --no-cache bash sed
+
 WORKDIR /app
 
 COPY --from=builder /app/dist /app/dist
@@ -22,8 +25,6 @@ ENV NODE_ENV=production
 
 RUN npm ci --ignore-scripts --omit-dev
 
-RUN sh /replace_open.sh
-
-RUN rm /replace_open.sh
+RUN /bin/sed -i 's/opn(authorizeUrl, { wait: false }).then(cp => cp.unref());/process.stderr.write(`Open this URL in your browser: ${authorizeUrl}\n`);/' node_modules/@google-cloud/local-auth/build/src/index.js
 
 ENTRYPOINT ["node", "dist/index.js"]
